--- a/.travis.yml
+++ b/.travis.yml
@@ -12,10 +12,12 @@ addons:
 install:
     - yarn install
 script:
+    - yarn test
     - yarn build
 cache:
-    directories:
-        - "node_modules"
+  yarn: true
+  directories:
+    - node_modules
 notifications:
     email: true
 deploy:
