--- a/package.json
+++ b/package.json
@@ -12,7 +12,11 @@
   },
   "devDependencies": {
     "remark-cli": "^6.0.1",
+    "remark-frontmatter": "^1.3.1",
     "remark-preset-lint-recommended": "^3.0.2",
     "vuepress": "^0.14.8"
+  },
+  "dependencies": {
+    "vuepress-theme-casper": "^1.0.2"
   }
 }
