--- a/package.json
+++ b/package.json
@@ -11,12 +11,18 @@
     "test": "remark -qf ."
   },
   "devDependencies": {
+    "prism-theme-night-owl": "^1.0.1",
     "remark-cli": "^6.0.1",
     "remark-frontmatter": "^1.3.1",
     "remark-preset-lint-recommended": "^3.0.2",
     "vuepress": "^0.14.8"
   },
   "dependencies": {
+    "prismjs": "^1.15.0",
+    "vue-prism-component": "^1.1.1",
     "vuepress-theme-casper": "^1.0.2"
+  },
+  "resolutions": {
+    "webpack-dev-middleware": "3.6.0"
   }
 }
